--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ FREE SHIPPING ON PAID ORDERS ABOVE &#8377 999
 
     <div class="rakhis">
         <div class="card">
-            <div class="cardHead"><im9 height="170vh" width="100%" src="pics/imgg1.webp" alt="img"></div>
+            <div class="cardHead"><img height="170vh" width="100%" src="pics/imgg1.webp" alt="img"></div>
             <div class="cardBody">Evil Eye Mini Stone rakhi</div>
             <div class="cardFoot"> <button>ADD TO CART</button></div>
         </div>
@@ -233,7 +233,7 @@ FREE SHIPPING ON PAID ORDERS ABOVE &#8377 999
 
     <div class="rakhis">
         <div class="card">
-            <div class="cardHead"><im9 height="170vh" width="100%" src="pics/imgg1.webp" alt="img"></div>
+            <div class="cardHead"><img height="170vh" width="100%" src="pics/imgg1.webp" alt="img"></div>
             <div class="cardBody">Evil Eye Mini Stone rakhi</div>
             <div class="cardFoot"> <button>ADD TO CART</button></div>
         </div>
@@ -278,7 +278,7 @@ FREE SHIPPING ON PAID ORDERS ABOVE &#8377 999
 
     <div class="rakhis">
         <div class="card">
-            <div class="cardHead"><im9 height="170vh" width="100%" src="pics/imgg1.webp" alt="img"></div>
+            <div class="cardHead"><img height="170vh" width="100%" src="pics/imgg1.webp" alt="img"></div>
             <div class="cardBody">Evil Eye Mini Stone rakhi</div>
             <div class="cardFoot"> <button>ADD TO CART</button></div>
         </div>
@@ -319,7 +319,7 @@ FREE SHIPPING ON PAID ORDERS ABOVE &#8377 999
 
     <div class="rakhis">
         <div class="card">
-            <div class="cardHead"><im9 height="170vh" width="100%" src="pics/imgg1.webp" alt="img"></div>
+            <div class="cardHead"><img height="170vh" width="100%" src="pics/imgg1.webp" alt="img"></div>
             <div class="cardBody">Evil Eye Mini Stone rakhi</div>
             <div class="cardFoot"> <button>ADD TO CART</button></div>
         </div>
@@ -360,7 +360,7 @@ FREE SHIPPING ON PAID ORDERS ABOVE &#8377 999
 
     <div class="rakhis">
         <div class="card">
-            <div class="cardHead"><im9 height="170vh" width="100%" src="pics/imgg1.webp" alt="img"></div>
+            <div class="cardHead"><img height="170vh" width="100%" src="pics/imgg1.webp" alt="img"></div>
             <div class="cardBody">Evil Eye Mini Stone rakhi</div>
             <div class="cardFoot"> <button>ADD TO CART</button></div>
         </div>
