--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ FREE SHIPPING ON PAID ORDERS ABOVE &#8377 999
 
     <main>
         <div class="vid">
-            <iframe height="615" src="https://www.youtube.com/embed/PNtEnCBpOk8?controls=0&amp;start=76" title="YouTube video player" frameborder="0" allow="accelerometer;  encrypted-media; gyroscope; picture-in-picture"  allowfullscreen></iframe>
+            <iframe width="100%" height="615" src="https://www.youtube.com/embed/PNtEnCBpOk8?controls=0&amp;start=76" title="YouTube video player" frameborder="0" allow="accelerometer;  encrypted-media; gyroscope; picture-in-picture"  allowfullscreen></iframe>
         </div>
           
         <div class="scroll">
